<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/header_of_app_navigator_buttons"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/popular_movies"
                style="@style/AppButton"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/app_navigator_button_popular_movies" />

            <Button
                android:id="@+id/stock_hawk"
                style="@style/AppButton"
                android:text="@string/app_navigator_button_stock_hawk" />

            <Button
                android:id="@+id/xyz_reader"
                style="@style/AppButton"
                android:text="@string/app_navigator_button_xyz_reader" />

            <Button
                android:id="@+id/best_news"
                style="@style/AppButton"
                android:text="@string/app_navigator_button_best_news" />

            <Button
                android:id="@+id/capstone_design"
                style="@style/AppButton"
                android:text="@string/app_navigator_button_capstone_design" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>